syntax = "proto3";

package order;

import "google/protobuf/timestamp.proto";
import 'google/protobuf/any.proto';
import 'google/protobuf/struct.proto';

message Order {
  string id = 1;
  string code = 2;
  string customerId = 3;
  string addressId = 4;
  string expectedDeliveryDate = 5;
  string paymentMethod = 6;
  float subTotal = 7;
  float discount = 8;
  float tax = 9;
  float deliveryFee = 10;
  float total = 11;
  bool isPaid = 12;
  google.protobuf.Timestamp paidAt = 13;
  google.protobuf.Timestamp deliveredAt = 14;
  string note = 15;
  string orderStatus = 16;
  string paymentStatus = 17;
  string shippingStatus = 18;
  optional string paymentResult = 19;
  google.protobuf.Timestamp createdAt = 20;
  google.protobuf.Timestamp updatedAt = 21;
}

message Orders {
  repeated Order orders = 1;
}

message OrderInput {
  string code = 1;
  string customerId = 2;
  optional string addressId = 3;
  optional string expectedDeliveryDate = 4;
  optional string paymentMethod = 5;
  float subTotal = 6;
  optional float discount = 7;
  optional float tax = 8;
  optional float deliveryFee = 9;
  float total = 10;
  optional bool isPaid = 11;
  optional google.protobuf.Timestamp paidAt = 12;
  optional google.protobuf.Timestamp deliveredAt = 13;
  optional string note = 14;
  optional string orderStatus = 15;
  optional string paymentStatus = 16;
  optional string shippingStatus = 17;
  optional string paymentResult = 18;
}

message CreateOrderInput {
  OrderInput data = 1;
}

message CreateManyOrdersInput {
  repeated OrderInput orders = 1;
}

message UpdateOrderInput {
  string id = 1;
  OrderInput data = 2;
}

message UpdateManyOrdersInput {
  google.protobuf.Any filter = 1;
  OrderInput update = 2;
}

message DeleteManyOrdersInput {
  google.protobuf.Any filter = 1;
}

message NullableOrder {
  oneof kind {
    google.protobuf.NullValue null = 1;
    Order data = 2;
  }
}